manifests/default/photon/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: photon
  name: photon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photon
  template:
    metadata:
      labels:
        app: photon
    spec:
      serviceAccountName: photon-sa
      containers:
      - image: ghcr.io/xyphyn/photon:v1.31.4
        name: photon
