manifests/default/photon/service.yml
apiVersion: v1
kind: Service
metadata:
  name: photon-service
spec:
  selector:
    app: photon
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
