manifests/default/photon/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-ciss"
    kubernetes.io/ingress.class: "traefik" 
spec:
  tls:
  - hosts:
    - phtn.termz.xyz
    - phtn.terminalnode.xyz
    secretName: photon-tls-secret
  rules:
  - host: "phtn.termz.xyz"
    http: &http-routing
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photon-service
            port:
              number: 80
  - host: "phtn.terminalnode.xyz"
    http: *http-routing

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-gwai-ingress
  annotations:
    cert-manager.io/cluster-issuer: "dot-gwai-ciss"
    kubernetes.io/ingress.class: "traefik" 
spec:
  tls:
  - hosts:
    - phtn.gwai
    secretName: dot-gwai-ca-secret
  rules:
  - host: "phtn.gwai"
    http: &http-routing
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photon-service
            port:
              number: 80
